--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Popular <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/home']">Popular <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/top']" href="#">Top rated <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="['/top']">Top rated <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">Favorite <span class="sr-only">(current)</span></a>
