--- a/src/app/popular-movie/popular-movie.component.html
+++ b/src/app/popular-movie/popular-movie.component.html
@@ -13,5 +13,29 @@
         </div>
       </div>
     </div>
+
+  </div>
+  <div class=" row justify-content-center">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <button *ngIf="page > 1" class="page-link" (click)="navigate(0)" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </button>
+        </li>
+        <li class="page-item">
+          <button class="page-link" disabled>
+            {{page}}
+          </button>
+        </li>
+        <li class="page-item">
+          <button class="page-link" (click)="navigate(1)" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </button>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
