add "add to favoris" button

--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -14,6 +14,7 @@
       <p *ngIf="writer.length">Writer : <strong *ngFor="let writer of writer"> {{writer?.name}}, </strong></p>
       <p>Director: <strong *ngFor="let director of director"> {{director?.name}} </strong></p>
       <p>Overview : {{movie?.overview}} </p>
+      <button class="btn btn-primary">Add to favoris</button>
     </div>
   </div>
 </div>
