--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,20 +1,20 @@
-<section id="footer">
+<footer class="nb-footer">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-        <p>This project is the Mobile Web Specialist Challenge made by Andela Learning Community for the Google Africa
-          Developer Scholarship Phase II</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-        <ul class="list-unstyled list-inline social text-center">
-          <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-          <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-          <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-github"></i></a></li>
-          <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
-        </ul>
+      <div class="col-sm-12">
+        <div class="about">
+          <p>This project is the Mobile Web Specialist Challenge made by Andela Learning Community for the Google Africa
+            Developer Scholarship Phase II.</p>
+          <div class="social-media">
+            <ul class="list-unstyled list-inline social text-center">
+              <li class="list-inline-item"><a href="" title=""><i class="fa fa-facebook"></i></a></li>
+              <li class="list-inline-item"><a href="" title=""><i class="fa fa-twitter"></i></a></li>
+              <li class="list-inline-item"><a href="" title=""><i class="fa fa-google-plus"></i></a></li>
+              <li class="list-inline-item"><a href="" title=""><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</section>
+</footer>
