--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
-<nav id="header" class="navbar navbar-expand-lg navbar-light bg-light text-white">
-  <a class="navbar-brand" href="https://www.themoviedb.org/"><img src="../../assets/tmdb logo2.png" width="45"
-      height="45"></a>
+<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#"><img src="../../assets/tmdb logo3.jpg" width="45" height="45"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,19 +7,28 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/home',1]">Popular <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/home',1]" href="/home">
+          <i class="fa fa-film"></i>
+          POPULAR
+        </a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/top',1]">Top rated <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/top',1]" href="/top">
+          <i class="fa fa-fire"></i>
+          TOP
+        </a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Favorite <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-star"></i>
+          FAVORITE
+        </a>
       </li>
     </ul>
     <div class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" [(ngModel)]="listFilter">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="onClick()">Search</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="onClick()">SEARCH</button>
     </div>
   </div>
 </nav>
