--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,75 +1,34 @@
-/* Footer */
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-section {
-  padding: 60px 0;
-}
 
-section .section-title {
+footer.nb-footer {
+  background: #222;
+}
+footer.nb-footer .about {
+  margin: 0 auto;
+  margin-top: 40px;
+  max-width: 1170px;
   text-align: center;
-  color: #007b5e;
-  margin-bottom: 50px;
-  text-transform: uppercase;
 }
-#footer {
-  background: #007b5e !important;
+footer.nb-footer .about p {
+  font-size: 13px;
+  color: #999;
+  margin-top: 30px;
 }
-#footer h5 {
-  padding-left: 10px;
-  border-left: 3px solid #eeeeee;
-  padding-bottom: 6px;
-  margin-bottom: 20px;
-  color: #ffffff;
+footer.nb-footer .about .social-media {
+  margin-top: 15px;
 }
-#footer a {
-  color: #ffffff;
-  text-decoration: none !important;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+footer.nb-footer .about .social-media ul li a {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 50%;
+  font-size: 16px;
+  color: #b78c33;
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
-#footer ul.social li {
-  padding: 3px 0;
-}
-#footer ul.social li a i {
-  margin-right: 5px;
-  font-size: 25px;
-  -webkit-transition: 0.5s all ease;
-  -moz-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-}
-#footer ul.social li:hover a i {
-  font-size: 30px;
-  margin-top: -10px;
-}
-#footer ul.social li a,
-#footer ul.quick-links li a {
-  color: #ffffff;
-}
-#footer ul.social li a:hover {
-  color: #eeeeee;
-}
-#footer ul.quick-links li {
-  padding: 3px 0;
-  -webkit-transition: 0.5s all ease;
-  -moz-transition: 0.5s all ease;
-  transition: 0.5s all ease;
-}
-#footer ul.quick-links li:hover {
-  padding: 3px 0;
-  margin-left: 5px;
-  font-weight: 700;
-}
-#footer ul.quick-links li a i {
-  margin-right: 5px;
-}
-#footer ul.quick-links li:hover a i {
-  font-weight: 700;
-}
-
-@media (max-width: 767px) {
-  #footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-  }
+footer.nb-footer .about .social-media ul li a:hover {
+  background: #b78c33;
+  color: #fff;
+  border-color: #b78c33;
 }
