--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,10 +1,12 @@
 <div class="container mb-3 mt-3">
   <div class="row">
     <div class="col-lx-12 col-md-6">
-      <div *ngIf="video">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" [src]="url" allowfullscreen></iframe>
-        </div>
+      <div class="embed-responsive embed-responsive-16by9">
+        <youtube-player *ngIf="id" [videoId]="id"></youtube-player>
+      </div>
+      <div *ngIf="!id">
+        <h1 class="text-center">Sorry ! </h1>
+        <h3 class="text-center">there is no trailer available</h3>
       </div>
     </div>
     <div class="col-lx-12 col-md-6">
@@ -27,4 +29,3 @@
     </div>
   </div>
 </div>
-
